syntax = "proto3";

import "sigmap/sigmap.proto";

option go_package = "sigmaos/apps/imgresize/proto";

message ImgResizeReq {
  string taskName = 1;
  string inputPath = 2;
}

message ImgResizeRep {
  bool oK = 1;
}

message StatusReq {
}

message StatusRep {
  int64 nDone = 1;
}

message ImgFenceReq {
}

message ImgFenceRep {
  TfenceProto imgdFence = 1;
}
